feat: notify on complete

--- a/src/ui/hsr_scanner.ui
+++ b/src/ui/hsr_scanner.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>450</height>
+    <height>560</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>450</height>
+    <height>560</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
-    <height>450</height>
+    <height>560</height>
    </size>
   </property>
   <property name="mouseTracking">
@@ -50,7 +50,7 @@
       <x>10</x>
       <y>10</y>
       <width>681</width>
-      <height>431</height>
+      <height>541</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -83,7 +83,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>151</width>
+        <width>131</width>
         <height>101</height>
        </rect>
       </property>
@@ -128,7 +128,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>350</y>
+        <y>460</y>
         <width>111</width>
         <height>41</height>
        </rect>
@@ -141,7 +141,7 @@
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>210</y>
+        <y>320</y>
         <width>151</width>
         <height>91</height>
        </rect>
@@ -285,9 +285,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>10</y>
-        <width>251</width>
+        <x>10</x>
+        <y>120</y>
+        <width>411</width>
         <height>101</height>
        </rect>
       </property>
@@ -374,7 +374,7 @@
       <widget class="QWidget" name="formLayoutWidget_3">
        <property name="geometry">
         <rect>
-         <x>130</x>
+         <x>150</x>
          <y>20</y>
          <width>111</width>
          <height>71</height>
@@ -436,12 +436,54 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="formLayoutWidget_5">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>20</y>
+         <width>111</width>
+         <height>71</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout_7">
+        <item row="0" column="0" colspan="2">
+         <widget class="QLabel" name="label_21">
+          <property name="text">
+           <string>Character options</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_20">
+          <property name="text">
+           <string>Min Level:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QSpinBox" name="spinBoxCharacterMinLevel">
+          <property name="correctionMode">
+           <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+          </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
+          <property name="maximum">
+           <number>15</number>
+          </property>
+          <property name="value">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>120</y>
+        <y>230</y>
         <width>411</width>
         <height>81</height>
        </rect>
@@ -498,7 +540,7 @@
         <x>430</x>
         <y>10</y>
         <width>231</width>
-        <height>381</height>
+        <height>491</height>
        </rect>
       </property>
       <property name="title">
@@ -510,7 +552,7 @@
          <x>10</x>
          <y>20</y>
          <width>211</width>
-         <height>321</height>
+         <height>431</height>
         </rect>
        </property>
        <property name="documentTitle">
@@ -547,7 +589,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>350</y>
+         <y>460</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -567,7 +609,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>360</y>
+        <y>470</y>
         <width>161</width>
         <height>16</height>
        </rect>
@@ -585,7 +627,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>210</y>
+        <y>320</y>
         <width>251</width>
         <height>131</height>
        </rect>
@@ -680,7 +722,7 @@ p, li { white-space: pre-wrap; }
         <x>430</x>
         <y>10</y>
         <width>231</width>
-        <height>381</height>
+        <height>491</height>
        </rect>
       </property>
       <property name="title">
@@ -692,7 +734,7 @@ p, li { white-space: pre-wrap; }
          <x>10</x>
          <y>20</y>
          <width>211</width>
-         <height>321</height>
+         <height>431</height>
         </rect>
        </property>
        <property name="readOnly">
@@ -714,7 +756,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>350</y>
+         <y>460</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -739,7 +781,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>70</y>
+        <y>90</y>
         <width>171</width>
         <height>81</height>
        </rect>
@@ -814,8 +856,8 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>171</width>
-        <height>51</height>
+        <width>181</width>
+        <height>71</height>
        </rect>
       </property>
       <property name="title">
@@ -826,8 +868,8 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>151</width>
-         <height>21</height>
+         <width>161</width>
+         <height>42</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -838,6 +880,13 @@ p, li { white-space: pre-wrap; }
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QCheckBox" name="checkBoxPlaySound">
+          <property name="text">
+           <string>Play sound on completion</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </widget>
@@ -845,7 +894,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>260</y>
+        <y>280</y>
         <width>201</width>
         <height>71</height>
        </rect>
@@ -890,7 +939,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>160</y>
+        <y>180</y>
         <width>411</width>
         <height>91</height>
        </rect>
@@ -1061,7 +1110,7 @@ p, li { white-space: pre-wrap; }
         <x>430</x>
         <y>10</y>
         <width>231</width>
-        <height>381</height>
+        <height>491</height>
        </rect>
       </property>
       <property name="title">
@@ -1073,7 +1122,7 @@ p, li { white-space: pre-wrap; }
          <x>10</x>
          <y>20</y>
          <width>211</width>
-         <height>321</height>
+         <height>431</height>
         </rect>
        </property>
        <property name="readOnly">
@@ -1097,7 +1146,7 @@ p, li { white-space: pre-wrap; }
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>350</y>
+         <y>460</y>
          <width>71</width>
          <height>21</height>
         </rect>
@@ -1117,7 +1166,7 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>340</y>
+        <y>360</y>
         <width>101</width>
         <height>31</height>
        </rect>
