--- a/src/ui/hsr_scanner.ui
+++ b/src/ui/hsr_scanner.ui
@@ -35,7 +35,7 @@
    <bool>false</bool>
   </property>
   <property name="windowTitle">
-   <string>HSR Scanner v1.0.0</string>
+   <string>HSR Scanner v1.1.0-pre.1</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="enabled">
@@ -91,7 +91,7 @@
        <string>Items to scan</string>
       </property>
       <layout class="QFormLayout" name="formLayout">
-       <item row="1" column="1">
+       <item row="0" column="1">
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <widget class="QCheckBox" name="checkBoxScanLightCones">
@@ -140,10 +140,10 @@
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>320</y>
-        <width>151</width>
-        <height>91</height>
+        <x>150</x>
+        <y>10</y>
+        <width>271</width>
+        <height>101</height>
        </rect>
       </property>
       <property name="title">
@@ -154,11 +154,17 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>131</width>
-         <height>61</height>
+         <width>251</width>
+         <height>71</height>
         </rect>
        </property>
        <layout class="QFormLayout" name="formLayout_3">
+        <property name="formAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="verticalSpacing">
+         <number>6</number>
+        </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label_23">
           <property name="text">
@@ -566,7 +572,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; text-decoration: underline;&quot;&gt;HSR SCANNER v1.0.0&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; text-decoration: underline;&quot;&gt;HSR SCANNER v1.1.0-pre.1&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline;&quot;&gt;HOW TO RUN&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;1. Set text language to English&lt;/p&gt;
@@ -629,7 +635,7 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>10</x>
         <y>320</y>
-        <width>251</width>
+        <width>411</width>
         <height>131</height>
        </rect>
       </property>
@@ -641,7 +647,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>231</width>
+         <width>391</width>
          <height>101</height>
         </rect>
        </property>
