--- a/src/ui/hsr_scanner.ui
+++ b/src/ui/hsr_scanner.ui
@@ -35,7 +35,7 @@
    <bool>false</bool>
   </property>
   <property name="windowTitle">
-   <string>HSR Scanner v1.4.0</string>
+   <string>HSR Scanner v1.4.1</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="enabled">
@@ -142,7 +142,7 @@
        <rect>
         <x>150</x>
         <y>10</y>
-        <width>261</width>
+        <width>271</width>
         <height>101</height>
        </rect>
       </property>
@@ -154,7 +154,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>241</width>
+         <width>251</width>
          <height>77</height>
         </rect>
        </property>
@@ -293,7 +293,7 @@
        <rect>
         <x>10</x>
         <y>120</y>
-        <width>401</width>
+        <width>411</width>
         <height>101</height>
        </rect>
       </property>
@@ -447,7 +447,7 @@
         <rect>
          <x>270</x>
          <y>20</y>
-         <width>121</width>
+         <width>131</width>
          <height>71</height>
         </rect>
        </property>
@@ -459,28 +459,32 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_20">
-          <property name="text">
-           <string>Min Level:</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1">
-         <widget class="QSpinBox" name="spinBoxCharacterMinLevel">
-          <property name="correctionMode">
-           <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
-          </property>
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>80</number>
-          </property>
-          <property name="value">
-           <number>1</number>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <item>
+           <widget class="QLabel" name="label_22">
+            <property name="text">
+             <string>Min Level:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="spinBoxCharacterMinLevel">
+            <property name="correctionMode">
+             <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+            </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>80</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -490,7 +494,7 @@
        <rect>
         <x>10</x>
         <y>230</y>
-        <width>401</width>
+        <width>411</width>
         <height>81</height>
        </rect>
       </property>
@@ -502,7 +506,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>381</width>
+         <width>391</width>
          <height>62</height>
         </rect>
        </property>
@@ -543,9 +547,9 @@
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>420</x>
+        <x>430</x>
         <y>10</y>
-        <width>241</width>
+        <width>231</width>
         <height>491</height>
        </rect>
       </property>
@@ -572,7 +576,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; text-decoration: underline;&quot;&gt;HSR SCANNER v1.4.0&lt;/span&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; text-decoration: underline;&quot;&gt;HSR SCANNER v1.4.1&lt;/span&gt;&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8.25pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8.25pt; text-decoration: underline;&quot;&gt;HOW TO RUN&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8.25pt;&quot;&gt;1. Set text language to English&lt;/span&gt;&lt;/p&gt;
@@ -637,7 +641,7 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>10</x>
         <y>320</y>
-        <width>401</width>
+        <width>411</width>
         <height>131</height>
        </rect>
       </property>
